@@ -1,5 +1,7 @@
 0.13
     removed TraversalMode.EDGE_BASED_1DIR
+    removed UnsafeDataAccess as not maintained, see #XXX
+
 0.12
     renamed VirtualEdgeIteratorState.getOriginalEdgeKey to more precise getOriginalEdgeKey #1549
     access refactoring #1436 that moves AccessValue into SpatialRule.Access
